--- a/main.css
+++ b/main.css
@@ -255,7 +255,7 @@ footer{
     @media(max-width: 766px){
         .navbar{
             align-content: flex-start;
-            align-items: flex-start;
+           /* align-items: flex-start;*/
         }
         .logo{
             padding-left: 20px;
