--- a/main.css
+++ b/main.css
@@ -262,6 +262,7 @@ footer{
         }*/
         .uppernav{
         Position: fixed;
+        top: 0;
         background-color: rgb(40,40,40);
 }
         .hero{
