--- a/main.css
+++ b/main.css
@@ -259,19 +259,21 @@ footer{
         }*/
         
         .logo{
-            posiiton: fixed;
+            position: relative;
+            margin-top: 80px;
         }
+        
         .uppernav{
-        Position: fixed;
-        top: 0;
-        background-color: rgb(40,40,40);
-}
+                 Position: fixed;
+                 top: 0;
+                 background-color: rgb(40,40,40);
+        }
         .hero{
-            display: flex;
-            flex-direction: column;
+              display: flex;
+              flex-direction: column;
         }
         .toggled-off{
-            display: none;
+              display: none;
         }
         .hero{
             padding-left: 12px;
