--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
 .container-left{
     display: block;  
     position: fixed;
-    width: 15vw;
+    width: 250px;
     padding: 20px;
     padding-left: 45px;
     padding-top: 60px;
